myanalyzer.output
Terminals unused in grammar

    KW_OF
    KW_WRITE
    KW_COMP
    KW_ENDCOMP


Grammar

    0 $accept: input $end

    1 input: listOfExprs

    2 listOfExprs: ε
    3            | listOfExprs stmt

    4 main_func: KW_DEF KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'

    5 stmt: main_func
    6     | var_dec stmt
    7     | const_dec stmt
    8     | func_dec stmt

    9 expr: expr '-' expr
   10     | expr '*' expr
   11     | expr '/' expr
   12     | expr '%' expr
   13     | expr '+' expr
   14     | expr TK_POW expr
   15     | TK_IDENT '[' expr ']'
   16     | '(' expr ')'
   17     | func_call
   18     | lib_funcs
   19     | expr '<' expr
   20     | expr '>' expr
   21     | expr TK_LE expr
   22     | expr TK_GE expr
   23     | expr TK_EQUALS expr
   24     | expr TK_NOTEQUALS expr
   25     | KW_NOT expr
   26     | expr KW_AND expr
   27     | expr KW_OR expr
   28     | expr INCR expr
   29     | expr DECR expr
   30     | expr MUL expr
   31     | expr DIV expr
   32     | expr MOD expr
   33     | expr '=' expr
   34     | '-' expr
   35     | TK_INT
   36     | TK_REAL
   37     | TK_STRING
   38     | TK_IDENT

   39 commandList: command
   40            | commandList command

   41 command: assign
   42        | if_block
   43        | for_block
   44        | return_block
   45        | while_block
   46        | KW_BREAK ';'
   47        | KW_CONTINUE ';'
   48        | lib_funcs ';'
   49        | func_call ';'
   50        | array_init

   51 var_dec: identifier_list ':' data_types ';'

   52 const_dec: KW_CONST identifier_list ':' data_types ';'

   53 func_dec: KW_DEF TK_IDENT '(' arg_dec ')' ':' func_body KW_ENDDEF ';'
   54         | KW_DEF TK_IDENT '(' arg_dec ')' '-' '>' data_types ':' func_body KW_ENDDEF ';'

   55 func_body: command
   56          | var_dec func_body
   57          | const_dec func_body
   58          | command func_body

   59 identifier_list: TK_IDENT
   60                | identifier_list ',' TK_IDENT
   61                | TK_IDENT '[' TK_INT ']'
   62                | TK_IDENT '[' ']'
   63                | TK_IDENT '=' expr
   64                | identifier_list ',' TK_IDENT '=' expr

   65 data_types: KW_INTEGER
   66           | KW_SCALAR
   67           | KW_STR
   68           | KW_BOOLEAN

   69 arg_dec: ε
   70        | TK_IDENT ':' data_types
   71        | arg_dec ',' TK_IDENT ':' data_types

   72 func_call: TK_IDENT '(' func_args ')'

   73 func_args: ε
   74          | expr
   75          | func_args ',' expr

   76 assign: TK_IDENT '=' expr ';'

   77 if_block: KW_IF '(' expr ')' ':' commandList KW_ENDIF ';'
   78         | KW_IF '(' expr ')' ':' commandList KW_ELSE ':' commandList KW_ENDIF ';'

   79 for_block: KW_FOR TK_IDENT KW_IN '[' expr ':' expr ':' expr ']' ':' commandList KW_ENDFOR ';'
   80          | KW_FOR TK_IDENT KW_IN '[' expr ':' expr ']' ':' commandList KW_ENDFOR ';'

   81 return_block: KW_RETURN ';'
   82             | KW_RETURN expr ';'

   83 while_block: KW_WHILE '(' expr ')' ':' commandList KW_ENDWHILE ';'

   84 array_init: TK_IDENT TK_ASSGN '[' expr KW_FOR expr ':' expr ']' ':' data_types ';'

   85 lib_funcs: KW_WRITESTR '(' func_args ')'
   86          | KW_WRITEINT '(' func_args ')'
   87          | KW_WRITESCAL '(' func_args ')'
   88          | KW_READSTR '(' ')'
   89          | KW_READINT '(' ')'
   90          | KW_READSCAL '(' ')'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 12
    '(' (40) 4 16 53 54 72 77 78 83 85 86 87 88 89 90
    ')' (41) 4 16 53 54 72 77 78 83 85 86 87 88 89 90
    '*' (42) 10
    '+' (43) 13
    ',' (44) 60 64 71 75
    '-' (45) 9 34 54
    '/' (47) 11
    ':' (58) 4 51 52 53 54 70 71 77 78 79 80 83 84
    ';' (59) 4 46 47 48 49 51 52 53 54 76 77 78 79 80 81 82 83 84
    '<' (60) 19
    '=' (61) 33 63 64 76
    '>' (62) 20 54
    '[' (91) 15 61 62 79 80 84
    ']' (93) 15 61 62 79 80 84
    error (256)
    TK_IDENT <str> (258) 15 38 53 54 59 60 61 62 63 64 70 71 72 76 79 80 84
    TK_INT <str> (259) 35 61
    TK_STRING <str> (260) 37
    TK_REAL <str> (261) 36
    KW_CONST (262) 52
    KW_ENDIF (263) 77 78
    KW_FOR (264) 79 80 84
    KW_IN (265) 79 80
    KW_ENDFOR (266) 79 80
    KW_WHILE (267) 83
    KW_ENDWHILE (268) 83
    KW_BREAK (269) 46
    KW_CONTINUE (270) 47
    KW_DEF (271) 4 53 54
    KW_ENDDEF (272) 4 53 54
    KW_MAIN (273) 4
    KW_RETURN (274) 81 82
    KW_OF (275)
    KW_READSTR (276) 88
    KW_READINT (277) 89
    KW_READSCAL (278) 90
    KW_WRITESTR (279) 85
    KW_WRITEINT (280) 86
    KW_WRITESCAL (281) 87
    KW_WRITE (282)
    KW_IF (283) 77 78
    KW_ELSE (284) 78
    KW_INTEGER (285) 65
    KW_SCALAR (286) 66
    KW_BOOLEAN (287) 68
    KW_STR (288) 67
    KW_COMP (289)
    KW_ENDCOMP (290)
    TK_POW (291) 14
    KW_AND (292) 26
    KW_OR (293) 27
    KW_NOT (294) 25
    TK_EQUALS (295) 23
    TK_NOTEQUALS (296) 24
    INCR (297) 28
    DECR (298) 29
    MUL (299) 30
    DIV (300) 31
    MOD (301) 32
    TK_ASSGN (302) 84
    TK_LE (303) 21
    TK_GE (304) 22


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    input (66)
        on left: 1
        on right: 0
    listOfExprs <str> (67)
        on left: 2 3
        on right: 1 3
    main_func <str> (68)
        on left: 4
        on right: 5
    stmt <str> (69)
        on left: 5 6 7 8
        on right: 3 6 7 8
    expr <str> (70)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 9 10 11 12 13 14 15 16 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 63 64 74 75 76 77 78 79 80 82 83 84
    commandList <str> (71)
        on left: 39 40
        on right: 40 77 78 79 80 83
    command <str> (72)
        on left: 41 42 43 44 45 46 47 48 49 50
        on right: 39 40 55 58
    var_dec <str> (73)
        on left: 51
        on right: 6 56
    const_dec <str> (74)
        on left: 52
        on right: 7 57
    func_dec <str> (75)
        on left: 53 54
        on right: 8
    func_body <str> (76)
        on left: 55 56 57 58
        on right: 4 53 54 56 57 58
    identifier_list <str> (77)
        on left: 59 60 61 62 63 64
        on right: 51 52 60 64
    data_types <str> (78)
        on left: 65 66 67 68
        on right: 51 52 54 70 71 84
    arg_dec <str> (79)
        on left: 69 70 71
        on right: 53 54 71
    func_call <str> (80)
        on left: 72
        on right: 17 49
    func_args <str> (81)
        on left: 73 74 75
        on right: 72 75 85 86 87
    assign <str> (82)
        on left: 76
        on right: 41
    if_block <str> (83)
        on left: 77 78
        on right: 42
    for_block <str> (84)
        on left: 79 80
        on right: 43
    return_block <str> (85)
        on left: 81 82
        on right: 44
    while_block <str> (86)
        on left: 83
        on right: 45
    array_init <str> (87)
        on left: 84
        on right: 50
    lib_funcs <str> (88)
        on left: 85 86 87 88 89 90
        on right: 18 48


State 0

    0 $accept: • input $end
    1 input: • listOfExprs
    2 listOfExprs: ε •
    3            | • listOfExprs stmt

    $default  reduce using rule 2 (listOfExprs)

    input        go to state 1
    listOfExprs  go to state 2


State 1

    0 $accept: input • $end

    $end  shift, and go to state 3


State 2

    1 input: listOfExprs •  [$end]
    3 listOfExprs: listOfExprs • stmt
    4 main_func: • KW_DEF KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'
    5 stmt: • main_func
    6     | • var_dec stmt
    7     | • const_dec stmt
    8     | • func_dec stmt
   51 var_dec: • identifier_list ':' data_types ';'
   52 const_dec: • KW_CONST identifier_list ':' data_types ';'
   53 func_dec: • KW_DEF TK_IDENT '(' arg_dec ')' ':' func_body KW_ENDDEF ';'
   54         | • KW_DEF TK_IDENT '(' arg_dec ')' '-' '>' data_types ':' func_body KW_ENDDEF ';'
   59 identifier_list: • TK_IDENT
   60                | • identifier_list ',' TK_IDENT
   61                | • TK_IDENT '[' TK_INT ']'
   62                | • TK_IDENT '[' ']'
   63                | • TK_IDENT '=' expr
   64                | • identifier_list ',' TK_IDENT '=' expr

    TK_IDENT  shift, and go to state 4
    KW_CONST  shift, and go to state 5
    KW_DEF    shift, and go to state 6

    $default  reduce using rule 1 (input)

    main_func        go to state 7
    stmt             go to state 8
    var_dec          go to state 9
    const_dec        go to state 10
    func_dec         go to state 11
    identifier_list  go to state 12


State 3

    0 $accept: input $end •

    $default  accept


State 4

   59 identifier_list: TK_IDENT •  [':', ',']
   61                | TK_IDENT • '[' TK_INT ']'
   62                | TK_IDENT • '[' ']'
   63                | TK_IDENT • '=' expr

    '='  shift, and go to state 13
    '['  shift, and go to state 14

    $default  reduce using rule 59 (identifier_list)


State 5

   52 const_dec: KW_CONST • identifier_list ':' data_types ';'
   59 identifier_list: • TK_IDENT
   60                | • identifier_list ',' TK_IDENT
   61                | • TK_IDENT '[' TK_INT ']'
   62                | • TK_IDENT '[' ']'
   63                | • TK_IDENT '=' expr
   64                | • identifier_list ',' TK_IDENT '=' expr

    TK_IDENT  shift, and go to state 4

    identifier_list  go to state 15


State 6

    4 main_func: KW_DEF • KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'
   53 func_dec: KW_DEF • TK_IDENT '(' arg_dec ')' ':' func_body KW_ENDDEF ';'
   54         | KW_DEF • TK_IDENT '(' arg_dec ')' '-' '>' data_types ':' func_body KW_ENDDEF ';'

    TK_IDENT  shift, and go to state 16
    KW_MAIN   shift, and go to state 17


State 7

    5 stmt: main_func •

    $default  reduce using rule 5 (stmt)


State 8

    3 listOfExprs: listOfExprs stmt •

    $default  reduce using rule 3 (listOfExprs)


State 9

    4 main_func: • KW_DEF KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'
    5 stmt: • main_func
    6     | • var_dec stmt
    6     | var_dec • stmt
    7     | • const_dec stmt
    8     | • func_dec stmt
   51 var_dec: • identifier_list ':' data_types ';'
   52 const_dec: • KW_CONST identifier_list ':' data_types ';'
   53 func_dec: • KW_DEF TK_IDENT '(' arg_dec ')' ':' func_body KW_ENDDEF ';'
   54         | • KW_DEF TK_IDENT '(' arg_dec ')' '-' '>' data_types ':' func_body KW_ENDDEF ';'
   59 identifier_list: • TK_IDENT
   60                | • identifier_list ',' TK_IDENT
   61                | • TK_IDENT '[' TK_INT ']'
   62                | • TK_IDENT '[' ']'
   63                | • TK_IDENT '=' expr
   64                | • identifier_list ',' TK_IDENT '=' expr

    TK_IDENT  shift, and go to state 4
    KW_CONST  shift, and go to state 5
    KW_DEF    shift, and go to state 6

    main_func        go to state 7
    stmt             go to state 18
    var_dec          go to state 9
    const_dec        go to state 10
    func_dec         go to state 11
    identifier_list  go to state 12


State 10

    4 main_func: • KW_DEF KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'
    5 stmt: • main_func
    6     | • var_dec stmt
    7     | • const_dec stmt
    7     | const_dec • stmt
    8     | • func_dec stmt
   51 var_dec: • identifier_list ':' data_types ';'
   52 const_dec: • KW_CONST identifier_list ':' data_types ';'
   53 func_dec: • KW_DEF TK_IDENT '(' arg_dec ')' ':' func_body KW_ENDDEF ';'
   54         | • KW_DEF TK_IDENT '(' arg_dec ')' '-' '>' data_types ':' func_body KW_ENDDEF ';'
   59 identifier_list: • TK_IDENT
   60                | • identifier_list ',' TK_IDENT
   61                | • TK_IDENT '[' TK_INT ']'
   62                | • TK_IDENT '[' ']'
   63                | • TK_IDENT '=' expr
   64                | • identifier_list ',' TK_IDENT '=' expr

    TK_IDENT  shift, and go to state 4
    KW_CONST  shift, and go to state 5
    KW_DEF    shift, and go to state 6

    main_func        go to state 7
    stmt             go to state 19
    var_dec          go to state 9
    const_dec        go to state 10
    func_dec         go to state 11
    identifier_list  go to state 12


State 11

    4 main_func: • KW_DEF KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'
    5 stmt: • main_func
    6     | • var_dec stmt
    7     | • const_dec stmt
    8     | • func_dec stmt
    8     | func_dec • stmt
   51 var_dec: • identifier_list ':' data_types ';'
   52 const_dec: • KW_CONST identifier_list ':' data_types ';'
   53 func_dec: • KW_DEF TK_IDENT '(' arg_dec ')' ':' func_body KW_ENDDEF ';'
   54         | • KW_DEF TK_IDENT '(' arg_dec ')' '-' '>' data_types ':' func_body KW_ENDDEF ';'
   59 identifier_list: • TK_IDENT
   60                | • identifier_list ',' TK_IDENT
   61                | • TK_IDENT '[' TK_INT ']'
   62                | • TK_IDENT '[' ']'
   63                | • TK_IDENT '=' expr
   64                | • identifier_list ',' TK_IDENT '=' expr

    TK_IDENT  shift, and go to state 4
    KW_CONST  shift, and go to state 5
    KW_DEF    shift, and go to state 6

    main_func        go to state 7
    stmt             go to state 20
    var_dec          go to state 9
    const_dec        go to state 10
    func_dec         go to state 11
    identifier_list  go to state 12


State 12

   51 var_dec: identifier_list • ':' data_types ';'
   60 identifier_list: identifier_list • ',' TK_IDENT
   64                | identifier_list • ',' TK_IDENT '=' expr

    ':'  shift, and go to state 21
    ','  shift, and go to state 22


State 13

    9 expr: • expr '-' expr
   10     | • expr '*' expr
   11     | • expr '/' expr
   12     | • expr '%' expr
   13     | • expr '+' expr
   14     | • expr TK_POW expr
   15     | • TK_IDENT '[' expr ']'
   16     | • '(' expr ')'
   17     | • func_call
   18     | • lib_funcs
   19     | • expr '<' expr
   20     | • expr '>' expr
   21     | • expr TK_LE expr
   22     | • expr TK_GE expr
   23     | • expr TK_EQUALS expr
   24     | • expr TK_NOTEQUALS expr
   25     | • KW_NOT expr
   26     | • expr KW_AND expr
   27     | • expr KW_OR expr
   28     | • expr INCR expr
   29     | • expr DECR expr
   30     | • expr MUL expr
   31     | • expr DIV expr
   32     | • expr MOD expr
   33     | • expr '=' expr
   34     | • '-' expr
   35     | • TK_INT
   36     | • TK_REAL
   37     | • TK_STRING
   38     | • TK_IDENT
   63 identifier_list: TK_IDENT '=' • expr
   72 func_call: • TK_IDENT '(' func_args ')'
   85 lib_funcs: • KW_WRITESTR '(' func_args ')'
   86          | • KW_WRITEINT '(' func_args ')'
   87          | • KW_WRITESCAL '(' func_args ')'
   88          | • KW_READSTR '(' ')'
   89          | • KW_READINT '(' ')'
   90          | • KW_READSCAL '(' ')'

    TK_IDENT      shift, and go to state 23
    TK_INT        shift, and go to state 24
    TK_STRING     shift, and go to state 25
    TK_REAL       shift, and go to state 26
    KW_READSTR    shift, and go to state 27
    KW_READINT    shift, and go to state 28
    KW_READSCAL   shift, and go to state 29
    KW_WRITESTR   shift, and go to state 30
    KW_WRITEINT   shift, and go to state 31
    KW_WRITESCAL  shift, and go to state 32
    KW_NOT        shift, and go to state 33
    '-'           shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 36
    func_call  go to state 37
    lib_funcs  go to state 38


State 14

   61 identifier_list: TK_IDENT '[' • TK_INT ']'
   62                | TK_IDENT '[' • ']'

    TK_INT  shift, and go to state 39
    ']'     shift, and go to state 40


State 15

   52 const_dec: KW_CONST identifier_list • ':' data_types ';'
   60 identifier_list: identifier_list • ',' TK_IDENT
   64                | identifier_list • ',' TK_IDENT '=' expr

    ':'  shift, and go to state 41
    ','  shift, and go to state 22


State 16

   53 func_dec: KW_DEF TK_IDENT • '(' arg_dec ')' ':' func_body KW_ENDDEF ';'
   54         | KW_DEF TK_IDENT • '(' arg_dec ')' '-' '>' data_types ':' func_body KW_ENDDEF ';'

    '('  shift, and go to state 42


State 17

    4 main_func: KW_DEF KW_MAIN • '(' ')' ':' func_body KW_ENDDEF ';'

    '('  shift, and go to state 43


State 18

    6 stmt: var_dec stmt •

    $default  reduce using rule 6 (stmt)


State 19

    7 stmt: const_dec stmt •

    $default  reduce using rule 7 (stmt)


State 20

    8 stmt: func_dec stmt •

    $default  reduce using rule 8 (stmt)


State 21

   51 var_dec: identifier_list ':' • data_types ';'
   65 data_types: • KW_INTEGER
   66           | • KW_SCALAR
   67           | • KW_STR
   68           | • KW_BOOLEAN

    KW_INTEGER  shift, and go to state 44
    KW_SCALAR   shift, and go to state 45
    KW_BOOLEAN  shift, and go to state 46
    KW_STR      shift, and go to state 47

    data_types  go to state 48


State 22

   60 identifier_list: identifier_list ',' • TK_IDENT
   64                | identifier_list ',' • TK_IDENT '=' expr

    TK_IDENT  shift, and go to state 49


State 23

   15 expr: TK_IDENT • '[' expr ']'
   38     | TK_IDENT •  [KW_FOR, TK_POW, KW_AND, KW_OR, TK_EQUALS, TK_NOTEQUALS, INCR, DECR, MUL, DIV, MOD, '=', '<', '>', TK_LE, TK_GE, '+', '-', '*', '/', '%', ')', ':', ';', ']', ',']
   72 func_call: TK_IDENT • '(' func_args ')'

    '('  shift, and go to state 50
    '['  shift, and go to state 51

    $default  reduce using rule 38 (expr)


State 24

   35 expr: TK_INT •

    $default  reduce using rule 35 (expr)


State 25

   37 expr: TK_STRING •

    $default  reduce using rule 37 (expr)


State 26

   36 expr: TK_REAL •

    $default  reduce using rule 36 (expr)


State 27

   88 lib_funcs: KW_READSTR • '(' ')'

    '('  shift, and go to state 52


State 28

   89 lib_funcs: KW_READINT • '(' ')'

    '('  shift, and go to state 53


State 29

   90 lib_funcs: KW_READSCAL • '(' ')'

    '('  shift, and go to state 54


State 30

   85 lib_funcs: KW_WRITESTR • '(' func_args ')'

    '('  shift, and go to state 55


State 31

   86 lib_funcs: KW_WRITEINT • '(' func_args ')'

    '('  shift, and go to state 56


State 32

   87 lib_funcs: KW_WRITESCAL • '(' func_args ')'

    '('  shift, and go to state 57


State 33

    9 expr: • expr '-' expr
   10     | • expr '*' expr
   11     | • expr '/' expr
   12     | • expr '%' expr
   13     | • expr '+' expr
   14     | • expr TK_POW expr
   15     | • TK_IDENT '[' expr ']'
   16     | • '(' expr ')'
   17     | • func_call
   18     | • lib_funcs
   19     | • expr '<' expr
   20     | • expr '>' expr
   21     | • expr TK_LE expr
   22     | • expr TK_GE expr
   23     | • expr TK_EQUALS expr
   24     | • expr TK_NOTEQUALS expr
   25     | • KW_NOT expr
   25     | KW_NOT • expr
   26     | • expr KW_AND expr
   27     | • expr KW_OR expr
   28     | • expr INCR expr
   29     | • expr DECR expr
   30     | • expr MUL expr
   31     | • expr DIV expr
   32     | • expr MOD expr
   33     | • expr '=' expr
   34     | • '-' expr
   35     | • TK_INT
   36     | • TK_REAL
   37     | • TK_STRING
   38     | • TK_IDENT
   72 func_call: • TK_IDENT '(' func_args ')'
   85 lib_funcs: • KW_WRITESTR '(' func_args ')'
   86          | • KW_WRITEINT '(' func_args ')'
   87          | • KW_WRITESCAL '(' func_args ')'
   88          | • KW_READSTR '(' ')'
   89          | • KW_READINT '(' ')'
   90          | • KW_READSCAL '(' ')'

    TK_IDENT      shift, and go to state 23
    TK_INT        shift, and go to state 24
    TK_STRING     shift, and go to state 25
    TK_REAL       shift, and go to state 26
    KW_READSTR    shift, and go to state 27
    KW_READINT    shift, and go to state 28
    KW_READSCAL   shift, and go to state 29
    KW_WRITESTR   shift, and go to state 30
    KW_WRITEINT   shift, and go to state 31
    KW_WRITESCAL  shift, and go to state 32
    KW_NOT        shift, and go to state 33
    '-'           shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 58
    func_call  go to state 37
    lib_funcs  go to state 38


State 34

    9 expr: • expr '-' expr
   10     | • expr '*' expr
   11     | • expr '/' expr
   12     | • expr '%' expr
   13     | • expr '+' expr
   14     | • expr TK_POW expr
   15     | • TK_IDENT '[' expr ']'
   16     | • '(' expr ')'
   17     | • func_call
   18     | • lib_funcs
   19     | • expr '<' expr
   20     | • expr '>' expr
   21     | • expr TK_LE expr
   22     | • expr TK_GE expr
   23     | • expr TK_EQUALS expr
   24     | • expr TK_NOTEQUALS expr
   25     | • KW_NOT expr
   26     | • expr KW_AND expr
   27     | • expr KW_OR expr
   28     | • expr INCR expr
   29     | • expr DECR expr
   30     | • expr MUL expr
   31     | • expr DIV expr
   32     | • expr MOD expr
   33     | • expr '=' expr
   34     | • '-' expr
   34     | '-' • expr
   35     | • TK_INT
   36     | • TK_REAL
   37     | • TK_STRING
   38     | • TK_IDENT
   72 func_call: • TK_IDENT '(' func_args ')'
   85 lib_funcs: • KW_WRITESTR '(' func_args ')'
   86          | • KW_WRITEINT '(' func_args ')'
   87          | • KW_WRITESCAL '(' func_args ')'
   88          | • KW_READSTR '(' ')'
   89          | • KW_READINT '(' ')'
   90          | • KW_READSCAL '(' ')'

    TK_IDENT      shift, and go to state 23
    TK_INT        shift, and go to state 24
    TK_STRING     shift, and go to state 25
    TK_REAL       shift, and go to state 26
    KW_READSTR    shift, and go to state 27
    KW_READINT    shift, and go to state 28
    KW_READSCAL   shift, and go to state 29
    KW_WRITESTR   shift, and go to state 30
    KW_WRITEINT   shift, and go to state 31
    KW_WRITESCAL  shift, and go to state 32
    KW_NOT        shift, and go to state 33
    '-'           shift, and go to state 34
    '('           shift, and go to state 35

    expr       go to state 59
    func_call  go to state 37
    lib_funcs  go to state 38


State 35
